[style] fix ui wrap in the edge browser

--- a/src/tree/features/search/search.less
+++ b/src/tree/features/search/search.less
@@ -18,6 +18,7 @@
 
     input.search {
         flex: 1;
+        min-width: 0;
         height: 30px;
         padding-left: 10px;
         margin: 0;
